<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/day_sign_content_text_white_30"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_shop_send_order_status"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/size_35"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_shop_send_nopayOrder"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:background="@drawable/button_login_bg"
            android:textColor="@color/white"
            android:text="@string/no_pay_order"
            />


        <TextView
            android:id="@+id/tv_shop_send_waitinOrder"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/color_title_bar"
            android:text="@string/waitin_order"
             />
        
        <TextView
            android:id="@+id/tv_shop_send_waitoutOrder"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textColor="@color/color_title_bar"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/wait_out_order"
             />

        <TextView
            android:id="@+id/tv_shop_send_okOrder"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textColor="@color/color_title_bar"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/ok_order"
             />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/shop_send_order_realtabcontent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>