<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:orientation="vertical" >
   

    <LinearLayout
        android:id="@+id/ll_fans_order_status"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/size_42"
        android:background="@color/rgb_FFF"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_fans_allOrder"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/me_allorder"
            android:textColor="@color/rgb_btn_red" />

        <TextView
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/size_10"
            android:layout_marginTop="@dimen/size_10"
            android:background="@color/rgb_line" />

        <TextView
            android:id="@+id/tv_fans_nopayOrder"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/no_pay_order"
            android:textColor="@color/color_order_status" />

        <TextView
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/size_10"
            android:layout_marginTop="@dimen/size_10"
            android:background="@color/rgb_line" />

        <TextView
            android:id="@+id/tv_fans_waitoutOrder"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/wait_out_order"
            android:textColor="@color/rgb_000" />

        <TextView
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/size_10"
            android:layout_marginTop="@dimen/size_10"
            android:background="@color/rgb_line" />

        <TextView
            android:id="@+id/tv_fans_waitinOrder"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/waitin_order"
            android:textColor="@color/rgb_000" />

        <TextView
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/size_10"
            android:layout_marginTop="@dimen/size_10"
            android:background="@color/rgb_line" />

        <!-- <TextView
            android:id="@+id/tv_fans_waitpjOrder"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/refund_order"
            android:textColor="@color/rgb_000" /> -->

        <TextView
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/size_10"
            android:layout_marginTop="@dimen/size_10"
            android:background="@color/rgb_line" />

        <TextView
            android:id="@+id/tv_fans_okOrder"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/ok_order"
            android:textColor="@color/rgb_000" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/my_fans_order_realtabcontent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    

</LinearLayout>