<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/color_title_bar" >

            <LinearLayout 
            android:id="@+id/iv_shop_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/icon_back" />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/shop_manager"
            />
        </LinearLayout>

            <TextView
                android:id="@+id/tv_shop_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/tv_shop_order"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>
        
    <com.cesaas.android.counselor.order.widget.RefreshAndLoadMoreView
        android:id="@+id/refresh_shoporder_and_load_more"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="#00000000"
        android:divider="@color/rgb_line"
        android:dividerHeight="1px"
        android:listSelector="#00000000" >

        <com.cesaas.android.counselor.order.widget.LoadMoreListView
            android:id="@+id/load_more_shoporder_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000"
            android:divider="@color/rgb_line"
            android:dividerHeight="1px"
            android:listSelector="#00000000" />
    </com.cesaas.android.counselor.order.widget.RefreshAndLoadMoreView>

    <TextView
        android:id="@+id/tv_shop_order_no_data"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/tv_shop_order_no_data"
        android:visibility="gone" />

</LinearLayout>