<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/base_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:id="@+id/iv_pwds_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:background="@drawable/icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="个人中心"
                android:layout_marginLeft="1.0dip"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_edit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="修改密码"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="@dimen/size_12" 
        android:background="@color/white">
        
        <com.cesaas.android.counselor.order.widget.MClearEditText
            android:id="@+id/ump_opwd"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
      		android:drawablePadding="6dp"
            android:background="@null"
            android:focusableInTouchMode="true"
            android:hint="@string/login_old_hint"
            android:inputType="textPassword"
            android:textColor="@color/c1"
            android:textColorHint="@color/c3"
            android:textCursorDrawable="@null"
            android:textSize="14.0sp" />
        
        <View style="@style/common_divider_line" 
           />
        
        <com.cesaas.android.counselor.order.widget.MClearEditText
            android:id="@+id/ump_npwd"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
      		android:drawablePadding="6dp"
            android:background="@null"
            android:focusableInTouchMode="true"
            android:hint="@string/login_new_hint"
            android:inputType="textPassword"
            android:textColor="@color/c1"
            android:textColorHint="@color/c3"
            android:textCursorDrawable="@null"
            android:textSize="14.0sp" />
        
        <View style="@style/common_divider_line" 
           />
        
        <com.cesaas.android.counselor.order.widget.MClearEditText
            android:id="@+id/ump_renpwd"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
      		android:drawablePadding="6dp"
            android:background="@null"
            android:focusableInTouchMode="true"
            android:hint="@string/login_renew_hint"
            android:inputType="textPassword"
            android:textColor="@color/c1"
            android:textColorHint="@color/c3"
            android:textCursorDrawable="@null"
            android:textSize="14.0sp" />
        
        <View style="@style/common_divider_line" 
           />


        <Button
            android:id="@+id/bt_set_pws_sures"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_marginTop="35.0dip"
            android:background="@drawable/button_ellipse_red_bg"
            android:gravity="center"
            android:text="@string/main_sures"
            android:textColor="@color/white"
            android:textSize="16.0sp" />
    </LinearLayout>

</LinearLayout>